# P2Pal

./: .gitignore  CMakeLists.txt  README.md  run.sh
include/: chat_session.h  main_window.h  message.h  message_input.h  network_manager.h
src/: chat_session.cpp  main.cpp  main_window.cpp  message.cpp  message_input.cpp  network_manager.cpp
